<resources>
    <string name="app_name">wechatclient</string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel">取消</string>
    <string name="space">&#160;&#160;</string>

    <!--登录-->
    <string name="login_account_hint_tips">手机号</string>
    <string name="login_password_hint_tips">密码</string>
    <string name="login">登&#160;录</string>
    <string name="login_account_password_empty_tips">账号或密码不能为空</string>
    <string name="loging">正在登录\u2026</string>
    <!--首页-->
    <string name="main_my_message">消息</string>
    <string name="main_my_friend">我的好友</string>
    <string name="main_my">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--我的-->
    <string name="personal_settings">设置</string>
</resources>
