<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_tag_height"
        android:orientation="horizontal">

        <com.qi.wechatclient.view.TabView
            android:id="@+id/main_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/main_my_message">
        </com.qi.wechatclient.view.TabView>

        <com.qi.wechatclient.view.TabView
            android:id="@+id/main_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/main_my_friend">
        </com.qi.wechatclient.view.TabView>

        <com.qi.wechatclient.view.TabView
            android:id="@+id/main_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/main_my">
        </com.qi.wechatclient.view.TabView>
    </LinearLayout>
</LinearLayout>